# KernelBench

./: .gitignore  pyproject.toml  requirements.txt  research_log.md  run_all_samples_evaluation.sh  run_all_samples_generation.sh  run_single_sample.sh  train-kernelbench-agent-art.py  train-kernelbench-agent-unsloth.py
inspect_eval/: Dockerfile  _react.py  compose.yaml  task.py
inspect_eval/tests/: test-eval.py
inspect_eval/tests/resources/: compile_error.py  newsample.py
kernelbench_agent/: agent_logic.py  common.py  config.py  dockerfile  train.py
results/timing/: 5090.csv  to-csv.py
results/timing/5090/: baseline_time_torch.json  baseline_time_torch_compile_cudagraphs.json  baseline_time_torch_compile_inductor_default.json  baseline_time_torch_compile_inductor_max-autotune-no-cudagraphs.json  baseline_time_torch_compile_inductor_max-autotune.json  baseline_time_torch_compile_inductor_reduce-overhead.json
scripts/: generate_and_eval_single_sample.py  generate_baseline_time.py
src/: eval.py  prompt_constructor.py  torch_compile.py  utils.py
