[project]
name = "kernelbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "anthropic",
  "modal",
  "openai",
  "packaging",
  "pydra_config",
  "tqdm",
  "datasets",
  "google-generativeai",
  "together",
  "pytest",
  "ninja",
  "archon-ai",
  "einops",
  "litellm",
  "inspect-ai>=0.3.112",
  "pytest-asyncio",
  "polars",
]

[project.optional-dependencies]
# we want to probably put this in a container at some pt
# instead of doing profiling on the host
compile-and-profile = [
  "torch==2.7.0",
  "transformers",
]

[tool.uv.sources]
torch = [
  { index = "pytorch", marker = "sys_platform != 'darwin'"},
]

[[tool.uv.index]]
# Optional name for the index.
name = "pytorch"
# Required URL for the index.
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# compatibility with setup.py
[build-system]               # ←--- tells uv “this *is* a package”
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]            # let setuptools discover the top-level dir “src”
packages = ["src"]           # simplest because your top folder really *is* the package